# pdf-lambda

./: .gitignore  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.chalice/: config.json
.github/workflows/: release.yml  version.yml
lib/: cli.ts  index.ts  utils.ts
lib/cdk/: app.ts  stack.ts  types.ts
lib/cdk/utils/: apiGw.ts  pdfLambda.ts
lib/cli/: deploy.ts  remove.ts
pdf_lambda/: app.py  handler.py
scripts/: deploy.sh
