[tool.poetry]
name = "pdf-lambda"
version = "1.0.7"
description = "Deployable code for AWS lambda for operations over PDFs."
authors = ["Jan Soukup <jan@ssoukup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
pikepdf = "^6.2.6"
pdfkit = "^1.0.0"
apig-wsgi = "^2.15.0"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
lambda-gateway = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
